resources/modules/admin/src/sass/admin-style.scss
@import "~bootstrap/dist/css/bootstrap.css";
@import "../../../../sass/common";
@import "../../../../sass/vars";
@import "components/admin-heading";
@import "components/elements";
@import "components/admin-table";
@import "components/admin-modal";
@import "components/admin-assets";
@import "components/admin-settings";
@import "components/tabs";
@import "components/admin-users";
@import "components/users-tools";
@import "components/admin-logo";
@import "components/admin-users";
@import "components/admin-models";
@import "components/admin-charts";
@import "~react-datepicker/dist/react-datepicker.css";
@import "components/admin-sql-builder";
@import url("/fonts/Roboto/stylesheet.css");
@import url("/fonts/OpenSans/stylesheet.css");
@import url("/fonts/PTSans/stylesheet.css");
@import url("/fonts/Montserrat/stylesheet.css");

.admin {
  display: flex;
  min-height: 100vh;
  padding-left: 271px;
  &__logo {
    width: 120px;
    height: 44px;
    padding-left: 12px;
    display: flex;
    align-items: center;
    justify-content: center;
    & img {
      max-width: 100%;
      max-height: 100%;
    }
  }
  &-nav {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    //overflow: hidden;
    overflow-x: hidden;
    overflow-y: auto;
    height: 100vh;
    background-color: $dark-purple;
    width: 271px;
    flex-shrink: 0;
    &-top {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 271px;
      padding-right: 5px;
      .nav-logo {
        background-color: #2a2d36;
      }
    }
    &-list {
      margin-top: 10px;
      &__link {
        display: flex;
        padding: 6px;
        color: #fff;
        font-size: 17px;
        font-weight: 500;
        &:hover {
          color: $green;
          & path {
            fill: $green;
          }
        }
        & svg {
          position: relative;
          top: 1px;
          margin: 3px 16px 0 7px;
        }
      }
      &_pages {
        position: absolute;
        top: 44px;
        left: 0;
        right: 0;
        bottom: 0;
        background-color: $dark-purple;
        transform: translate(100%, 0);
        transition-duration: 0.3s;
      }
    }
  }
  &-content {
    width: 100%;
  }
  &-caption {
    margin-bottom: 15px;
    font-weight: 600;
    font-size: 18px;
  }
  &__bars {
    margin: 12px 12px;
    float: right;
    cursor: pointer;
  }
  &_pages-show {
    & .admin-nav-list_pages {
      transform: translate(0, 0);
    }
  }
  &__version {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 5px;
    text-align: center;
    font-size: 13px;
    color: #fff;
  }
  &-form__subheader {
    text-transform: uppercase;
    margin-top: 25px;
    font-weight: 600;
    font-size: 16px;
    line-height: 20px;
  }
}

.icon {
  width: 16px;
  height: 16px;
  fill: white;
  margin-right: 15px;
  display: inline-block;
  align-items: center;
}
.admin-nav li {
  list-style-type: none;
  background: #343b4c;
  &:hover {
    background: #495267;
  }
}
ul {
  margin-left: 0;
  padding-left: 0;
}
p {
  display: inline-block;
  color: white;
  font-weight: 500;
  font-family: Montserrat, Arial, sans-serif;
}
a {
  text-decoration: none;
}
.admin-page {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.admin-content {
  background-color: $light-light-gray;
  flex-grow: 1;
  padding: 13px 25px;
}

.ace_editor {
  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
}

